# proseiae

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
chat/: admin.py  consumers.py  forms.py  models.py  routing.py  signals.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/static/chat/js/: chat-messages.js
chat/templates/chat/: chat.html  chat_create.html  chat_delete.html  chat_edit.html  chat_home.html
chat/templates/chat/partials/: _chat-home-update.html  _chat-online-count.html  _chat-private-status.html  _global-online-users.html  _leave-chat-modal.html  _message-item.html  _message-ws.html  _message.html  _online-user-status.html  _online-users-count.html
chat/templatetags/: chat_tags.py
core/: asgi.py  context_processors.py  middleware.py  mixins.py  settings.py  urls.py
core/templatetags/: math_filters.py  message_tags.py
global/static/global/js/: messages.js  theme.js
global/templates/allauth/layouts/: base.html
global/templates/global/: base.html
global/templates/global/partials/: _footer.html  _logout-modal.html  _messages.html  _navbar.html
home/: urls.py
home/templates/home/: home.html
theme/static_src/: package-lock.json  package.json
theme/static_src/src/: styles.css
users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
users/forms/: __init__.py  forms.py  mixins.py
users/migrations/: 0001_initial.py
users/static/account/js/: avatar.js
users/templates/account/: delete.html  email_change.html  email_confirm.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  profile.html  profile_edit.html  settings.html  signup.html
users/templates/account/partials/: _avatar-action-modal.html  _avatar.html  _badge-not-verified.html  _badge-verified.html  _logged-in-user-warning.html
users/templatetags/: avatar_tags.py
utils/: users.py
