[project]
name = "proseiae"
version = "0.1.0"
description = "ProseiAê! é uma aplicação web de conversa em tempo real."
authors = [{ name = "Sérgio Dantas", email = "sergiodnts828@gmail.com" }]
license = { text = "CC BY-NC-ND 4.0" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-tailwind (>=4.2.0,<5.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "django-cleanup (>=9.0.0,<10.0.0)",
    "django-allauth (>=65.10.0,<66.0.0)",
    "heroicons[django] (>=2.11.0,<3.0.0)",
    "django-htmx (>=1.23.2,<2.0.0)",
    "channels[daphne] (>=4.3.1,<5.0.0)",
]

[project.urls]
repository = "https://github.com/sergiodantasz/proseiae"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
django-browser-reload = "^1.18.0"
djlint = "^1.36.4"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
ignore = ["F401"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
