[project]
name = "proseiae"
version = "0.1.0"
description = "ProseiAê! é uma aplicação web de conversa em tempo real."
authors = [{ name = "Sérgio Dantas", email = "sergiodnts828@gmail.com" }]
readme = "README.md"
license = { text = "CC BY-NC-ND 4.0" }
requires-python = ">=3.14"
dependencies = [
  "channels-redis>=4.3.0",
  "channels[daphne]>=4.3.2",
  "cookiecutter>=2.7.1",
  "django>=6.0.3",
  "django-allauth>=65.14.3",
  "django-cleanup>=9.0.0",
  "django-environ>=0.13.0",
  "django-htmx>=1.27.0",
  "django-redis>=6.0.0",
  "django-tailwind>=4.4.2",
  "heroicons[django]>=2.13.0",
  "pillow>=12.1.1",
]

[dependency-groups]
dev = [
  "django-browser-reload>=1.21.0",
  "djlint>=1.36.4",
  "honcho>=2.0.0",
  "ruff>=0.15.4",
]

[tool.ruff.lint]
ignore = ["F401"]
